fix: prevent chart titles from wrapping

--- a/assets/src/js/admin/reports/components/chart/style.scss
+++ b/assets/src/js/admin/reports/components/chart/style.scss
@@ -7,6 +7,7 @@
 	> .givewp-chart-title-text {
 		font-weight: 600;
 		font-size: 15px;
+		white-space: nowrap;
 	}
 }
 
